--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.tubes.perkuliahan.k4"
-        minSdk 24
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -88,4 +88,6 @@ dependencies {
     kaptAndroidTest "com.google.dagger:hilt-compiler:2.45"
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
+    implementation "io.github.vanpra.compose-material-dialogs:core:0.9.0"
+    implementation "io.github.vanpra.compose-material-dialogs:datetime:0.9.0"
 }
